--- a/public/style.css
+++ b/public/style.css
@@ -1,20 +1,27 @@
 * {
   margin: 0;
   padding: 0;
-  color: #3e90c9;
+  color: white;
+  text-transform: capitalize;
+  font-weight: bold;
+}
+a {
+  text-decoration: none;
 }
 
 body {
-  background-color: #181818;
-  color: #3e90c9;
-  text-shadow: #3e90c9 1px 1px 30px;
+  background-color: #121212;
+  color: white;
+  text-shadow: white 1px 1px 30px;
   width: 100vw;
   overflow-x: hidden;
+  gap: 10rem;
+  padding: 8vmin 0;
 }
 
 h1 {
-  font-size: 8rem;
-  font-weight: bold;
+  font-size: 20vmin;
+  
 }
 
 .header {
@@ -25,15 +32,43 @@ h1 {
 .main {
   text-shadow: none;
   font-size: 2rem;
+  width: 75%;
 }
 
-button {
-  font-size: 3rem;
-  border: 5px #3e90c9 solid;
-  padding: 1rem;
-  border-radius: 1rem;
+#cardButton {
+  margin-top: .5rem;
+  font-size: 1rem;
+  border: 1px white solid;
+  padding: .5rem;
+  border-radius: .5rem;
   background: none;
   cursor: pointer;
+  background-color: #181818;
+}
+
+#cardButtonDel {
+  margin-top: .5rem;
+  font-size: 1rem;
+  border: 1px white solid;
+  padding: .5rem;
+  border-radius: .5rem;
+  background: none;
+  cursor: pointer;
+  background-color: #181818;
+}
+
+#boxButton {
+  font-size: 3rem;
+  border: 3px white solid;
+  padding: 1rem;
+  border-radius: .5rem;
+  background: none;
+  cursor: pointer;
+  transition: all .5s ease-in-out;
+  background-color: #181818;
+}
+#boxButton:hover {
+  transform: scale(1.1);
 }
 
 #main-content {
@@ -56,22 +91,49 @@ button {
 }
 
 #renderedCard {
-  border: 5px #3e90c9 solid;
-  border-radius: 1rem;
+  border: 3px white solid;
+  border-radius: .5rem;
+  font-size: medium;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 1rem;
-  width: 20rem;
-  height: 20rem;
+  gap: 1rem;
+  width: 10rem;
+  transition: all .3s ease-in-out;
+  background-color: #181818;
+}
+
+#boxCard {
+  border: 3px white solid;
+  border-radius: .5rem;
+  font-size: medium;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  gap: .5rem;
+  width: 10rem;
+  background-color: #181818;
+}
+
+#renderedCard:hover {
+  transform: scale(1.1);
 }
 
 #goToButton {
   font-size: small;
   justify-self: flex-end;
+  border: 1px white solid;
   align-self: center;
   width: fit-content;
+  background: none;
+  cursor: pointer;
+  padding: .5rem;
+  border-radius: .5rem;
 }
 
 .flex-center {
@@ -79,4 +141,10 @@ button {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+#sizeInput, #colorInput, #containsInput {
+  color: black;
+  width: 65%;
+  text-align: center;
 }
