--- a/public/style.css
+++ b/public/style.css
@@ -21,7 +21,6 @@ body {
 
 h1 {
   font-size: 20vmin;
-  
 }
 
 .header {
@@ -35,26 +34,28 @@ h1 {
   width: 75%;
 }
 
-#deleteButton, #saveButton {
-  margin-top: .5rem;
+#deleteButton,
+#saveButton {
+  margin-top: 0.5rem;
   font-size: 1rem;
   border: 1px white solid;
-  padding: .5rem;
-  border-radius: .5rem;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
   background: none;
   cursor: pointer;
   background-color: #181818;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
-#boxButton {
+#boxButton,
+#addButton {
   font-size: 3rem;
   border: 3px white solid;
   padding: 1rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   background: none;
   cursor: pointer;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
   background-color: #181818;
 }
 
@@ -79,7 +80,7 @@ h1 {
 
 #renderedCard {
   border: 3px white solid;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   font-size: medium;
   text-align: center;
   display: flex;
@@ -88,13 +89,14 @@ h1 {
   padding: 1rem;
   gap: 1rem;
   width: 10rem;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   background-color: #181818;
 }
 
-#boxForm {
+#boxForm,
+#addForm {
   border: 3px white solid;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   font-size: medium;
   text-align: center;
   display: flex;
@@ -102,7 +104,7 @@ h1 {
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  gap: .5rem;
+  gap: 0.5rem;
   width: 10rem;
   background-color: #181818;
 }
@@ -115,8 +117,8 @@ h1 {
   width: fit-content;
   background: none;
   cursor: pointer;
-  padding: .5rem;
-  border-radius: .5rem;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
 }
 
 .flex-center {
@@ -126,13 +128,18 @@ h1 {
   flex-direction: column;
 }
 
-#sizeInput, #colorInput, #containsInput {
+#sizeInput,
+#colorInput,
+#containsInput {
   color: black;
   width: 65%;
   text-align: center;
 }
 
-#renderedCard:hover, #boxButton:hover, #saveButton:hover, #deleteButton:hover {
+#renderedCard:hover,
+#boxButton:hover,
+#saveButton:hover,
+#deleteButton:hover {
   transform: scale(1.1);
-  filter: invert(1)
+  filter: invert(1);
 }
